=== Version 0.2.4
* Ehnancements
  * Can now find span by :text
  * Can now find button by :value
  * Added #forward and #back methods to PageObject
  * Updated to use watir-webdriver 0.3.0

=== Version 0.2.3 / 2011-08-01
* Enhancements
  * Can now find a TableCell by its' text
  * If we receive an error calling #attach_to_window, wait one second and try again
  * Will call callback method #initialize_page method if it exists on a page object
  * Renamed all *_<element_type> methods to *_element.  Created alias for backward compatibility
  * Delegating unknown method calls on Element to the driver element object
  * Improved block handling when passed to element creation method
  * Updated to use selenium-webdriver 2.3.2

=== Version 0.2.2 / 2011-07-31
* Enhancements
  * Can find frame by name
  * Added #clear method to Element
  * Removed #switch_to_from from PageObject
  * Added #in_frame to Accessors to handle frame and iframe access
* Fixes
  * Clearing value from text_field before setting value on Selenium

=== Version 0.2.1 / 2011-07-29
* Enhancements
  * Added ability to locate div by the contained text
  * Added #attach_to_window so a page object and operate on another window
  * Added #switch_to_frame to allow one to switch to a frame
  * Added #send_keys to PageObject::Elements::Element
  * Added #refresh to page object
  * Work toward making drivers pluggable
  * Updated to use selenium-webdriver 2.2.0
  * Updated to use watir-webdriver 0.2.8

=== Version 0.2 / 2011-07-24
* Enhancements
  * Async handling
    * Added #wait_until to page object to support async events at page level
    * Added the following methods to PageObject::Elements::Element
      * #when_present
      * #when_visible
      * #when_not_visible
      * #wait_until
  * Handling popups
    * Added #alert to page object to override default alert popup behavior
    * Added #confirm to page object to override default confirm popup behavior